[ui] implement stack layout